apply rubocop fixes
